--- a/VirtoCommerce.Webshop/Views/Parts/ShoppingCart.cshtml
+++ b/VirtoCommerce.Webshop/Views/Parts/ShoppingCart.cshtml
@@ -1,74 +1,57 @@
-﻿<div class="ws-cart-content">
-    <div class="ws-box">
-        <div class="ws-box-header">
+﻿@{
+    Style.Require("LatoFont");
+    Style.Require("VirtoCommerceStore");
+}
+
+<div class="vc-two-third vc-cart-items">
+    <div class="vc-box">
+        <div class="vc-box-header">
             <h3>@T("Shopping cart")</h3>
-            <h5>@T("You currently have") <strong>@Model.ShoppingCart.LineItemCount</strong> @T("item(s) in your cart")</h5>
         </div>
-        <div class="ws-box-content">
-            <table>
-                <thead>
-                    <tr>
-                        <th>@T("Product")</th>
-                        <th>@T("Qty")</th>
-                        <th>@T("Single")</th>
-                        <th>@T("Total")</th>
-                        <th></th>
-                    </tr>
-                </thead>
-                <tbody class="ws-cart-items">
-                    @foreach (var lineItem in Model.ShoppingCart.LineItems)
-                    {
-                        <tr>
-                            <td class="ws-col-product">
-                                <div class="ws-image">
-                                    <a href="#">
-                                        <img alt="@lineItem.Name" src="@lineItem.ImageUrl" />
-                                    </a>
-                                </div>
-                                <h5>
-                                    <a href="#">@lineItem.Name</a>
-                                </h5>
-                            </td>
-                            <td>
-                                <input class="ws-input-sm" data-item-id="@lineItem.Id" type="text" value="@lineItem.Quantity" />
-                            </td>
-                            <td>
-                                <span class="ws-price">$@lineItem.Price.Original.ToString("#.00")</span>
-                            </td>
-                            <td>
-                                <span class="ws-price">$@lineItem.LinePrice.ToString("#.00")</span>
-                            </td>
-                            <td class="ws-remove-item">
-                                <a data-item-id="@lineItem.Id" href="#">Remove</a>
-                            </td>
-                        </tr>
-                    }
-                </tbody>
-            </table>
-        </div>
-        <div class="ws-box-footer">
-            <a class="ws-btn ws-btn-primary ws-btn-lg" href="@Href("~/Checkout")">@T("Proceed to checkout")</a>
+        <table>
+            @foreach (var lineItem in Model.ShoppingCart.LineItems)
+            {
+                <tr>
+                    <td>
+                        <div class="vc-image">
+                            <img src="@lineItem.ImageUrl" title="@lineItem.Name" />
+                        </div>
+                    </td>
+                    <td>
+                        <h5 class="vc-item-name">@lineItem.Name</h5>
+                    </td>
+                    <td class="vc-quantity">
+                        <input data-item-id="@lineItem.Id" type="text" value="@lineItem.Quantity" />
+                    </td>
+                    <td>
+                        <div class="vc-item-price">
+                            $@lineItem.LinePrice.ToString("#.00")
+                        </div>
+                    </td>
+                    <td>
+                        <div class="vc-remove-item" data-item-id="@lineItem.Id" title="@T("Remove item")"></div>
+                    </td>
+                </tr>
+            }
+        </table>
+        <div class="vc-box-footer">
+            <a class="vc-btn vc-btn-primary vc-right" href="@Href("~/Checkout")">@T("Proceed to checkout")</a>
         </div>
     </div>
 </div>
-<div class="ws-cart-info">
-    <div class="ws-cart-details">
-        <div class="ws-box">
-            <div class="ws-box-header">
-                <h3>@T("Order totals")</h3>
-                <h5>@T("Shipping costs and taxes will be evaluated durind checkout")</h5>
-            </div>
-            <ul class="ws-price-list">
-                <li>
-                    @T("Subtotal"):
-                    <strong>$@Model.ShoppingCart.Subtotal.ToString("#.00")</strong>
-                </li>
-                <li class="ws-important">
-                    @T("Total"):
-                    <strong>$@Model.ShoppingCart.Total.ToString("#.00")</strong>
-                </li>
-            </ul>
+<div class="vc-one-third vc-cart-info">
+    <div class="vc-box">
+        <div class="vc-box-header">
+            <h3>@T("Order totals")</h3>
         </div>
+        <ul class="vc-totals">
+            <li>
+                @T("Subtotal"):<strong>$@Model.ShoppingCart.Subtotal.ToString("#.00")</strong>
+            </li>
+            <li class="vc-important">
+                @T("Total"):<strong>$@Model.ShoppingCart.Total.ToString("#.00")</strong>
+            </li>
+        </ul>
     </div>
 </div>
 
@@ -85,8 +68,13 @@
         return el;
     }
 
+    function updateTotals(shoppingCart) {
+        $(".vc-totals li:eq(0) strong").text("$" + shoppingCart.Subtotal);
+        $(".vc-totals li:eq(1) strong").text("$" + shoppingCart.Total);
+    }
+
     $(function () {
-        $(".ws-cart-items input").on("blur", function () {
+        $(".vc-cart-items input[type='text']").on("blur", function () {
             var lineItemId = $(this).data("item-id");
             var quantity = $(this).val();
             var that = $(this);
@@ -105,16 +93,14 @@
                             alert(jsonResponse.errorMessage);
                         } else {
                             var lineItem = jsonResponse.shoppingCart.LineItems.getElementByVal("Id", lineItemId);
-                            that.parents("tr").find(".ws-price:eq(1)").text("$" + lineItem.LinePrice);
-                            $(".ws-price-list li:eq(0) strong").text("$" + jsonResponse.shoppingCart.Subtotal);
-                            $(".ws-price-list li:eq(1) strong").text("$" + jsonResponse.shoppingCart.Total);
+                            that.parents("tr").find(".vc-item-price").text("$" + lineItem.LinePrice);
+                            updateTotals(jsonResponse.shoppingCart);
                         }
                     }
                 }
             });
         });
-
-        $(".ws-remove-item a").on("click", function () {
+        $(".vc-remove-item").on("click", function () {
             var lineItemId = $(this).data("item-id");
             var that = $(this);
             $.ajax({
@@ -133,9 +119,8 @@
                                 window.location.reload();
                             }
                             that.parents("tr").remove();
-                            $(".ws-price-list li:eq(0) strong").text("$" + jsonResponse.shoppingCart.Subtotal);
-                            $(".ws-price-list li:eq(1) strong").text("$" + jsonResponse.shoppingCart.Total);
-                            $(".ws-mini-cart span").text(jsonResponse.shoppingCart.LineItemCount);
+                            updateTotals(jsonResponse.shoppingCart);
+                            $(".vc-cart-preview span").text(jsonResponse.shoppingCart.LineItemCount);
                         }
                     }
                 }
