--- a/VirtoCommerce.Webshop/Views/Parts/ShoppingCartPreview.cshtml
+++ b/VirtoCommerce.Webshop/Views/Parts/ShoppingCartPreview.cshtml
@@ -1,4 +1,9 @@
-﻿<div class="ws-mini-cart">
+﻿@{
+    Style.Require("LatoFont");
+    Style.Require("VirtoCommerceStore");
+}
+
+<div class="vc-cart-preview">
     <a href="@Href("~/Cart")" title="@T("Go to cart")">
         @if (Model.ShoppingCart != null && Model.ShoppingCart.LineItemCount > 0)
         {
